--- a/ex4.1.html
+++ b/ex4.1.html
@@ -59,7 +59,7 @@
       <div class="d-flex gap-3">
         <a href="https://www.facebook.com/" class="text-white fs-5"><i class="bi bi-facebook"></i></a>
         <a href="#" class="text-white fs-5"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="text-white fs-5"><i class="bi bi-instagram"></i></a>
+        <a href="http://www.instagram.com/" class="text-white fs-5"><i class="bi bi-instagram"></i></a>
         <a href="#" class="text-white fs-5"><i class="bi bi-linkedin"></i></a>
       </div>
       <form class="d-flex ms-5" role="search">
